--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,23 @@
 services:
-  php:
+  php-server:
     build: .
     stop_signal: SIGINT
     ports:
-      - "127.0.0.1:9090:9090"
+      - "9090:9090"
     volumes:
       - .:/var/www/html
     working_dir: /var/www/html
-    command: php index2.php
+    entrypoint: 'php'
+    command: '${INDEX_FILE:-index-multi.php}'
     extra_hosts:
       - "host.docker.internal:host-gateway"
+
+  locust:
+    image: locustio/locust:latest
+    ports:
+      - "8089:8089"  # Locust web UI port
+    volumes:
+      - ./locustfile.py:/mnt/locust/locustfile.py
+    command: -f /mnt/locust/locustfile.py
+    depends_on:
+      - php-server
