--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - .:/var/www/html
     working_dir: /var/www/html
     entrypoint: 'php'
-    command: '${INDEX_FILE:-index-multi.php}'
+    command: '${INDEX_FILE:-single.php}'
     extra_hosts:
       - "host.docker.internal:host-gateway"
 
